<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_option"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/ic_option" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="知世"
                android:textColor="@color/blue2"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/ic_qr" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="391dp"
        android:layout_height="432dp"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.047">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/banner_button1"
                    android:textColor="@color/blue2" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/banner_button2"
                    android:textColor="@color/blue2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/banner_button3"
                    android:textColor="@color/blue2" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/banner_1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:src="@drawable/banner_title" />

        </LinearLayout>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="391dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhishi_imgHome"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comui_tab_home" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="        首页" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/find"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhishi_imgZhishi"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comui_tab_pond_selected" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="        知世" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhishi_imgMessage"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comui_tab_message" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="        消息" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhishi_imgMine"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comui_tab_person" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="        我的" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_line_shadow" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/buttonLayout"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:paddingBottom="6dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/comui_tab_post" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>